workloads/longhorn/longhorn.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  template:
    spec:
      containers:
        - name: longhorn-driver-deployer
