workloads/longhorn/network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: longhorn
    - matchExpressions:
      - key: longhorn.io/job-task
        operator: Exists
    - matchExpressions:
      - key: recurring-job.longhorn.io
        operator: Exists
    - matchExpressions:
      - key: longhorn.io/component
        operator: Exists
    - matchExpressions:
      - key: app
        operator: In
        values: [csi-attacher, csi-provisioner, csi-resizer, csi-snapshotter]
  - fromEntities:
    - host
    - remote-node
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: longhorn
    - matchExpressions:
      - key: longhorn.io/job-task
        operator: Exists
    - matchExpressions:
      - key: recurring-job.longhorn.io
        operator: Exists
    - matchExpressions:
      - key: longhorn.io/component
        operator: Exists
    - matchExpressions:
      - key: app
        operator: In
        values: [csi-attacher, csi-provisioner, csi-resizer, csi-snapshotter]
  - toEntities:
    - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-ui
  ingress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": traefik
        app.kubernetes.io/name: traefik
        app.kubernetes.io/component: traefik
