workloads/longhorn/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-manager
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
  - toPorts:
    - ports:
      - port: "9500"
    fromEndpoints:
    - matchLabels:
        app: longhorn-manager
    - matchLabels:
        app: longhorn-ui
    - matchLabels:
        app: longhorn-csi-plugin
    - matchExpressions:
      - key: longhorn.io/job-task
        operator: Exists
    - matchExpressions:
      - key: recurring-job.longhorn.io
        operator: Exists
    - matchLabels:
        app: longhorn-driver-deployer
  - toPorts:
    - ports:
      - port: '9501'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        app: longhorn-conversion-webhook
  - toPorts:
    - ports:
      - port: '9502'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        app: longhorn-admission-webhook
  - toPorts:
    - ports:
      - port: '9503'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        app: longhorn-recovery-backend
  egress:
  - toPorts:
    - ports:
      - port: "9500"
    toEndpoints:
    - matchLabels:
        app: longhorn-manager
  - toPorts:
    - ports:
      - port: "8500"
      - port: "8501"
    toEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
  - toPorts:
    - ports:
      - port: "8000"
    toEndpoints:
    - matchLabels:
        longhorn.io/component: backing-image-manager
    - matchLabels:
        longhorn.io/component: backing-image-data-source
  - toEntities:
    - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-ui
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-ui
  egress:
  - toEndpoints:
    - matchLabels:
        app: longhorn-manager
    toPorts:
    - ports:
      - port: "9500"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-instance-manager
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/component: instance-manager
  ingress:
  - toPorts:
    - ports:
      - port: "8500"
      - port: "8501"
    fromEndpoints:
    - matchLabels:
        app: longhorn-manager
  - toPorts:
    - ports:
      - port: "10000-30000"
    fromEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
  - toPorts:
    - ports:
      - port: "3260"
    fromEntities:
    - host
    - remote-node
  - toPorts:
    - ports:
      - port: "10000-30000"
    fromEndpoints:
    - matchLabels:
        longhorn.io/component: backing-image-data-source
  egress:
  - toPorts:
    - ports:
      - port: "10000-30000"
    toEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
  - toEndpoints:
    - matchLabels:
        longhorn.io/component: backing-image-data-source
    toPorts:
    - ports:
      - port: "8002"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-csi-plugin
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-csi-plugin
  egress:
  - toEndpoints:
    - matchLabels:
        app: longhorn-manager
    toPorts:
    - ports:
      - port: "9500"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-sidecars
spec:
  endpointSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [csi-attacher, csi-provisioner, csi-resizer, csi-snapshotter]
  egress:
  - toEntities:
    - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-driver-deployer
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-driver-deployer
  egress:
  - toEndpoints:
    - matchLabels:
        app: longhorn-manager
    toPorts:
    - ports:
      - port: "9500"
  - toEntities:
    - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backing-image-manager
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/component: backing-image-manager
  ingress:
  - toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        app: longhorn-manager
  - toPorts:
    - ports:
      - port: "30001-31000"
    fromEndpoints:
    - matchLabels:
        longhorn.io/component: backing-image-manager
  egress:
  - toPorts:
    - ports:
      - port: "10000-30000"
    toEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
  - toPorts:
    - ports:
      - port: "30001-31000"
    toEndpoints:
    - matchLabels:
        app: backing-image-manager
  - toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
    toEndpoints:
    - matchLabels:
        longhorn.io/component: backing-image-data-source
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backing-image-data-source
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/component: backing-image-data-source
  ingress:
  - toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        app: longhorn-manager
    - matchLabels:
        longhorn.io/component: backing-image-manager
  - toPorts:
    - ports:
      - port: '8002'
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
  egress:
  - toPorts:
    - ports:
      - port: "10000-30000"
    toEndpoints:
    - matchLabels:
        longhorn.io/component: instance-manager
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recurring-job
spec:
  endpointSelector:
    matchExpressions:
    - key: recurring-job.longhorn.io
      operator: Exists
    matchLabels:
      longhorn.io/managed-by: longhorn-manager
  egress:
  - toEndpoints:
    - matchLabels:
        app: longhorn-manager
    toPorts:
    - ports:
      - port: "9500"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: job-task
spec:
  endpointSelector:
    matchExpressions:
    - key: longhorn.io/job-task
      operator: Exists
  egress:
  - toEndpoints:
    - matchLabels:
        app: longhorn-manager
    toPorts:
    - ports:
      - port: "9500"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-conversion-webhook
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-conversion-webhook
  egress:
  - toPorts:
    - ports:
      - port: '9501'
        protocol: TCP
    toEndpoints:
    - matchLabels:
        app: longhorn-manager
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-admission-webhook
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-admission-webhook
  egress:
  - toPorts:
    - ports:
      - port: "9502"
    toEndpoints:
    - matchLabels:
        app: longhorn-manager

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-recovery-backend
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-recovery-backend
  egress:
  - toPorts:
    - ports:
      - port: "9503"
    toEndpoints:
    - matchLabels:
        app: longhorn-manager
